syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.locationtech.geogig.grpc.storage";
option java_outer_classname = "ObjectInfoRPC";

package grpc;

import "model/ObjectId.proto";
import "model/RevObject.proto";

/*
 * This is enough to reconstruct an org.locationtech.geogig.storage.ObjectInfo
 * which is composed of a NodeRef + a RevObject.
 */
message ObjectInfo{
    string path = 1;
    /*optional*/ ObjectId metadataId = 2;
    RevObject object = 3;
}